[project]
name = "auth0-mfa-sms-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-communication-callautomation>=1.4.0",
    "azure-communication-identity>=1.5.0",
    "azure-communication-sms>=1.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
]
